--- a/index.html
+++ b/index.html
@@ -2,6 +2,49 @@
 <html>
 
 <head>
+	<style type="text/css">.flip-card {
+  background-color: transparent;
+  width: 300px;
+  height: 200px;
+  border: 1px solid #f1f1f1;
+  perspective: 1000px; /* Remove this if you don't want the 3D effect */
+}
+
+/* This container is needed to position the front and back side */
+.flip-card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.8s;
+  transform-style: preserve-3d;
+}
+
+/* Do an horizontal flip when you move the mouse over the flip box container */
+.flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg);
+}
+
+/* Position the front and back side */
+.flip-card-front, .flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+}
+
+/* Style the front side (fallback if image is missing) */
+.flip-card-front {
+  background-color: #bbb;
+  color: black;
+}
+
+/* Style the back side */
+.flip-card-back {
+  background-color: dodgerblue;
+  color: white;
+  transform: rotateY(180deg);
+}</style>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, maximum-scale=1">
 
@@ -77,7 +120,7 @@
 		<!--main-section-start-->
 		<div class="container">
 			<h2>Background Information</h2>
-			<h6>We offer exceptional service with complimentary hugs.</h6>
+			<h6>This is where information about my origin and background is found.</h6>
 			<div class="row">
 				<div class="col-lg-4 col-sm-6 wow fadeInLeft delay-05s">
 					<div class="service-list">
@@ -85,8 +128,8 @@
 							<i class="fa fa-paw"></i>
 						</div>
 						<div class="service-list-col2">
-							<h3>branding &amp; identity</h3>
-							<p>Proin iaculis purus digni consequat sem digni ssim. Donec entum digni ssim.</p>
+							<h3>Grandperants &amp; Yazur </h3>
+							<p>My grandperants are originally from a town near Yaffa called Yazur were they were living from.</p>
 						</div>
 					</div>
 					<div class="service-list">
@@ -118,7 +161,7 @@
 					</div>
 				</div>
 				<figure class="col-lg-8 col-sm-6  text-right wow fadeInUp delay-02s">
-					<img src="img/macbook-pro.png" alt="">
+					<img src="yazur.jpg" alt="">
 				</figure>
 
 			</div>
@@ -232,14 +275,14 @@
 			<b class="quote-right wow fadeInDown delay-03"><i class="fa fa-quote-right"></i></b>
 			<div class="row">
 				<div class="col-lg-12">
-					<p class="client-part-haead wow fadeInDown delay-05">It was a pleasure to work with the guys at Knight Studio. They made sure we were well fed and drunk all the time!</p>
+					<p class="client-part-haead wow fadeInDown delay-05">Keep hanging with yourself until you are you again.</p>
 				</div>
 			</div>
 			<ul class="client wow fadeIn delay-05s">
 				<li><a href="#">
-            	<img src="img/client-pic1.jpg" alt="">
-                <h3>James Bond</h3>
-                <span>License To Drink Inc.</span>
+            	<img src="jay-shetty.jpg" alt="" style="width: 15%">
+                <h3>Jay Shetty</h3>
+                <span>Purpose Coach<span>
             </a></li>
 			</ul>
 		</div>
@@ -249,11 +292,11 @@
 		<!--c-logo-part-start-->
 		<div class="container">
 			<ul>
-				<li><a href="#"><img src="img/c-liogo1.png" alt=""></a></li>
-				<li><a href="#"><img src="img/c-liogo2.png" alt=""></a></li>
-				<li><a href="#"><img src="img/c-liogo3.png" alt=""></a></li>
-				<li><a href="#"><img src="img/c-liogo4.png" alt=""></a></li>
-				<li><a href="#"><img src="img/c-liogo5.png" alt=""></a></li>
+				<li><a href="#"><img src="" alt=""></a></li>
+				<li><a href="#"><img src="" alt=""></a></li>
+				<li><a href="#"><img src="" alt=""></a></li>
+				<li><a href="#"><img src="" alt=""></a></li>
+				<li><a href="#"><img src="" alt=""></a></li>
 			</ul>
 		</div>
 	</div>
@@ -261,8 +304,8 @@
 	<section class="main-section team" id="team">
 		<!--main-section team-start-->
 		<div class="container">
-			<h2>team</h2>
-			<h6>Take a closer look into our amazing team. We won’t bite.</h6>
+			<h2>Family</h2>
+			<h6>This is the most valuable thing to my heart.</h6>
 			<div class="team-leader-block clearfix">
 				<div class="team-leader-box">
 					<div class="team-leader wow fadeInDown delay-03s">
